--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
-        <title>Reemplaza este título que se muestra en la ventana de tu navegador</title>
+        <title>Frecuencia de letras por idioma</title>
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital@0;1&display=swap" rel="stylesheet" />
         <style>
@@ -41,16 +41,15 @@
         <header class="container">
             <div class="row py-5">
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
-                    <h1 class="mb-3 mt-5 text-center">Aquí va el título (corto, llamativo y creativo)</h1>
+                    <h1 class="mb-3 mt-5 text-center">Frecuencia de letras por idioma</h1>
 
-                    <h2 class="fs-6 mb-5 text-center text-uppercase">Aquí van los créditos (sus nombres)</h2>
+                    <h2 class="fs-6 mb-5 text-center text-uppercase">Por Constanza Valdovinos</h2>
 
                     <p class="lead">
-                        Aquí va la bajada (un sumario del asunto con elementos que sirven de gancho de lectura; ojalá un solo párrafo). En este y todos los reemplazos, respeta los colores del código fuente en tu editor. Los colores son
-                        indicaciones.
+                     El uso de frecuencias de letras y el análisis de frecuencias juega un papel fundamental en los criptogramas y varios juegos de rompecabezas de palabras, entre ellos Hangman, Scrabble y el programa de televisión Wheel of Fortune.
                     </p>
 
-                    <p>Reemplaza este párrafo con un texto que complemente a la bajada. Puedes extender este párrafo hasta las doscientas palabras.</p>
+                    <p>En el siguiente gráfico se puede ver la distribución de letras según su frecuencia de uso en cada idioma.</p>
                 </div>
             </div>
         </header>
