--- a/index.html
+++ b/index.html
@@ -2589,7 +2589,7 @@
 
                     <!--…y llega hasta acá-->
                     <p class="p-5">
-                        Ya mostraste. Ahora describe. En este párrafo aplica lo aprendido de la charla del Dr. Mario García. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse auctor, nulla sed dignissim lacinia, quam
+                        En este párrafo aplica lo aprendido de la charla del Dr. Mario García. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse auctor, nulla sed dignissim lacinia, quam
                         massa tristique turpis, in aliquam arcu nunc eu est. Mauris consectetur lacus nec lectus lacinia gravida. Ut id libero quis leo lacinia tempus. Phasellus a fringilla ante, eget sagittis orci. In eleifend porta
                         sapien, et mattis massa ultricies sit amet. Cras vel augue at tellus bibendum sagittis non in ex. Duis a felis et ipsum tempus ultrices sed a nisl.
                     </p>
@@ -2597,8 +2597,8 @@
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                     <img src="viz.svg" class="w-100">
                     <p class="p-5">
-                        Versión originalmente obtenida de <a href="https://app.rawgraphs.io/" target="_blank" target="_blank" rel="noreferrer noopener">RAWGraphs 2.0 beta</a>. Se utilizan los datos de […]. El gráfico utilizado es […], el
-                        cual […].
+                        Versión originalmente obtenida de <a href="https://app.rawgraphs.io/" target="_blank" target="_blank" rel="noreferrer noopener">RAWGraphs 2.0 beta</a>. Se utilizan los datos de RAWGraphs obtenidos de Wikipedia. El gráfico utilizado es Matrix Plot, el
+                        cual Permite comparar dos dimensiones categóricas, disponiéndolas en los ejes horizontal y vertical. Cada glifo (cuadrado o círculo) representa una posible correlación entre las dos dimensiones. Las variables cuantitativas asociadas se pueden representar con tamaño y / o color.
                     </p>
                 </div>
             </div>
