--- a/index.html
+++ b/index.html
@@ -2589,9 +2589,7 @@
 
                     <!--…y llega hasta acá-->
                     <p class="p-5">
-                        En este párrafo aplica lo aprendido de la charla del Dr. Mario García. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse auctor, nulla sed dignissim lacinia, quam
-                        massa tristique turpis, in aliquam arcu nunc eu est. Mauris consectetur lacus nec lectus lacinia gravida. Ut id libero quis leo lacinia tempus. Phasellus a fringilla ante, eget sagittis orci. In eleifend porta
-                        sapien, et mattis massa ultricies sit amet. Cras vel augue at tellus bibendum sagittis non in ex. Duis a felis et ipsum tempus ultrices sed a nisl.
+                        Como se puede ver, las letras más frecuentes a nivel general de los idiomas son la 'a' y la 'e'. Si bien, las de menor frecuencia son las letras 'q' y 'x'.
                     </p>
                 </div>
                 <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
