--- a/index.html
+++ b/index.html
@@ -2606,7 +2606,7 @@
                 <div class="col-12">
                     <p class="d-flex justify-content-between small p-1 m-0">
                         <!--reemplaza el # que sigue con la URL de tu cuenta en GitHub-->
-                        <a href="#">Reemplaza esto con tu Nombre y Apellido</a>
+                        <a href="https://github.com/constanzavaldovinos">Constanza Valdovinos</a>
                         <a href="https://github.com/profesorfaco/dno075-2021-1/">Infografía Digital v2</a>
                         <a href="https://github.com/profesorfaco/dno075-2021-1/tree/main/clase-05" class="d-none d-lg-inline">Lunes 12 de abril, 2021</a>
                     </p>
